# rfClassifier

./: .gitignore  README.md  audit  base_model.py  config.yaml  main.py  mya.py  requirements-certified.txt  requirements.txt  setup-certified.bash  setup.cfg  tester.bash  tester.ps1  utils.py
cfg/: config.yaml  supported_models.cfg
docs/: .buildinfo  genindex.html  index.html  links.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  links.rst.txt  release_notes.rst.txt
docs/_sources/admin_guide/: certified_install.rst.txt  index.rst.txt
docs/_sources/dev_guide/: docs.rst.txt  index.rst.txt
docs/admin_guide/: certified_install.html  index.html
docs/app_guide/: genindex.html  index.html  links.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/app_guide/admin_guide/: certified_install.html  index.html
docs/app_guide/dev_guide/: docs.html  index.html
docs/app_guide/user_guide/: index.html
docs/audit/: diff1.0.1.txt
docs/dev_guide/: docs.html  index.html
docs/dev_guide/api/: base_model.html  index.html  intro.html  mya.html  utils.html
docs/source/: conf.py  index.rst
docs/user_guide/: index.html
docsrc/: Makefile
docsrc/certified_files/: index.html  release_notes.html
docsrc/source/: conf.py  index.rst  links.rst  release_notes.rst
lib/: base_model.py  main.py  mya.py
src/rf_classifier/: main.py
tests/: test_cli.py  test_main.py  test_model.py  test_mya.py  test_set.txt  test_utils.py  tester.bash  tester.ps1  testing_utils.py
tests/files/: test_config_w_ext_config_dir.yaml  test_config_w_models_dir.yaml  test_config_wo_models_dir.yaml
(+47 files in other folders)
