[metadata]
name = rf_classifier
version = 2.0.0
author = Adam Carpenter, Jefferson Lab
author_email = adamc@jlab.org
description = An application for classifying C100 SRF Faults given waveform data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JeffersonLab/rf_classifier
classifiers=
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
license = JLab
license_files = LICENSE
[options]
packages = find:
python_requires = >= 3.7
setup_requires =
    setuptools >= 30.3.0
    pip >= 23.0
install_requires=
    numpy
    pandas
    onnxruntime
    rfwtools
    requests
    scikit-learn
[options.packages.find]
where = src
include = rf_classifier
exclude = test
